force-app/main/default/objects/AHA_ERL_Usage_Tracker__c/AHA_ERL_Usage_Tracker__c.object-meta.xml
<CustomObject>
    <label>AHA-ERL Usage Tracker</label>
    <nameField>
        <displayFormat>RSORTrack-{000000}</displayFormat>
        <label>AHA-ERL Usage Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AHA-ERL Usage Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>