force-app/main/default/objects/AHA_ERL_Usage_Tracker__c/fields/ItemSelected__c.field-meta.xml
<CustomField>
    <fullName>ItemSelected__c</fullName>
    <description>The item/sor/etc selected by the user</description>
    <label>Item Selected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>