force-app/main/default/objects/AHA_ERL_Usage_Tracker__c/fields/PathTaken__c.field-meta.xml
<CustomField>
    <fullName>PathTaken__c</fullName>
    <label>Path Taken</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>