force-app/main/default/objects/AHA_ERL_Usage_Tracker__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>