force-app/main/default/objects/AHA_ERL_Usage_Tracker__c/fields/TimeTaken__c.field-meta.xml
<CustomField>
    <fullName>TimeTaken__c</fullName>
    <label>Time Taken (seconds)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>