force-app/main/default/objects/AHA_ERL_Usage_Tracker__c/fields/TrackerType__c.field-meta.xml
<CustomField>
    <fullName>TrackerType__c</fullName>
    <label>Tracker Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COMPLETE</fullName>
            </value>
            <value>
                <fullName>PARTIAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>