force-app/main/default/objects/AHA_ERL_Usage_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ItemSelected__c</columns>
    <columns>Profile__c</columns>
    <columns>TimeTaken__c</columns>
    <columns>PathTaken__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>